--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/pcfilicetti/play-hard#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "node-geocoder": "^3.22.0",
     "path": "^0.12.7"
   }
 }
