--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "node-fetch": "^2.2.0",
     "node-geocoder": "^3.22.0",
     "path": "^0.12.7"
   }
