--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,5 @@
 {
   "database": {
-    "rules": "database.rules.json",
-    "headers": [{
-      "source": "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
-      "headers": [{
-        "key": "Access-Control-Allow-Origin",
-        "value": "*"
-      }]
-    }]
+    "rules": "database.rules.json"
   }
 }
