--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/pcfilicetti/play-hard#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "clientside-require": "^4.7.2",
+    "dateformat": "^3.0.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "google-distance-matrix": "^1.1.1",
